# openseal

./: App.tsx  README.md  electron-main.js  index.html  metadata.json  package-lock.json  package.json  preload.js  types.ts  vite.config.ts
components/: ActivityMonitor.tsx  Cleaner.tsx  Dashboard.tsx  Duplicates.tsx  LargeFiles.tsx  StartupItems.tsx
services/: geminiService.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
